--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "phpoffice/phpspreadsheet": "dev-master"
+        "phpoffice/phpspreadsheet": "dev-master",
+        "spatie/array-to-xml": "dev-master"
     }
 }
